# boost-python-example

./: .gitignore  CMakeLists.txt  README  build.sh
include/: log.h
src/: main.cpp
src/libtestlib/: CMakeLists.txt  testlib.cpp
src/libtestlib/include/: testlib.h
src/tests/: CMakeLists.txt
src/tests/python/: CMakeLists.txt  test.py
